--- a/cssEd/editings.css
+++ b/cssEd/editings.css
@@ -2,7 +2,7 @@
 * @Author: iceStone
 * @Date:   2016-01-11 11:23:18
 * @Last Modified by:   Marte
-* @Last Modified time: 2016-06-21 14:12:00
+* @Last Modified time: 2016-06-29 10:23:44
 */
 
 body {
@@ -200,10 +200,14 @@ header a.btn-info:hover {
 }
 
 .editor_panel> div {
-  height: 100%;
+  position: absolute;
+  width: 100%;
+  left: 0px;
+  bottom: 0px;
+  top: 39px;
 }
 
-.editor_panel>div>ul>li {
+.editor_panel>ul>li {
   text-align: center;
   width: 64px;
   border-left: 1px solid #000;
@@ -252,10 +256,10 @@ header a.btn-info:hover {
 
 /*edit下面选项菜单*/
 .tab-content {
-  height: 100%;
   position:absolute;
-  overflow: hidden;
-  padding-bottom: 40px;
+  left: 0px;
+  top:0px;
+  bottom: 0px;
 }
 
 .tab-content .panel-group .panel {
@@ -293,6 +297,8 @@ header a.btn-info:hover {
 .tab-content .panel-body {
   color: #eee;
   background: #595959;
+  position:relative;
+  overflow: auto;
 }
 
 .tab-content .panel-group {
