--- a/cssEd/metroStyle.css
+++ b/cssEd/metroStyle.css
@@ -14,6 +14,7 @@ website:    http://code.google.com/p/jquerytree/
 .ztree li ul{ margin:0; padding:0 0 0 18px}
 .ztree li ul.line{ background:url(../images/img/line_conn.png) 0 0 repeat-y;}
 
+.ztree li {width:60px;}
 .ztree li a {padding-right:3px; margin:0; cursor:pointer; height:21px; color:#333; background-color: transparent; text-decoration:none; vertical-align:top; display: inline-block}
 .ztree li a:hover {text-decoration:underline}
 .ztree li a.curSelectedNode {padding-top:0px; background-color:#ddd; color:black; height:21px; opacity:0.8;}
@@ -111,9 +112,9 @@ ul.list {margin-left: 17px;}
 div.content_wrap {width: 320px;height:380px;}
 div.content_wrap div.left{float: left;width: 320px;}
 div.content_wrap div.right{float: right;width: 340px;}
-div.zTreeDemoBackground {width:320px;text-align:left;}
+div.zTreeDemoBackground {text-align:left; background: #fff; position:absolute; left: 0px; top:0px; bottom: 0; width:318px;}
 
-ul.ztree {margin-top: 10px;border: 1px solid #617775;background: #fff;width:320px;height:360px;overflow-y:auto;overflow-x:auto;}
+ul.ztree {margin-top: 10px;  background: #fff; width: auto;}
 ul.log {border: 1px solid #617775;background: #f0f6e4;width:300px;height:170px;overflow: hidden;}
 ul.log.small {height:45px;}
 ul.log li {color: #666666;list-style: none;padding-left: 10px;}
@@ -139,14 +140,23 @@ div.ruler div.cursor {height:20px; width:30px; background-color:#3C6E31; color:w
       padding: 0 5px;
       cursor: pointer;
       list-style: none outside none;
-      background-color: #DFDFDF;
+      background-color: #eee;
   }
 
-  div#rMenu ul {
+  div#rMenu ul,div#rMenuEye ul {
     padding: 0px;
     margin: 0px;
   }
 
   ul.ztree {
     margin: 0px;
+  }
+
+  div#rMenuEye {position:absolute; visibility:hidden; top:0; background-color: #555;text-align: left;padding: 2px;}
+  div#rMenuEye ul li{
+    margin: 1px 0;
+    padding: 0 5px;
+    cursor: pointer;
+    list-style: none outside none;
+    background-color: #eee;
   }
