--- a/cssEd/editings.css
+++ b/cssEd/editings.css
@@ -2,7 +2,7 @@
 * @Author: iceStone
 * @Date:   2016-01-11 11:23:18
 * @Last Modified by:   Marte
-* @Last Modified time: 2016-06-29 10:23:44
+* @Last Modified time: 2016-07-07 19:17:56
 */
 
 body {
@@ -98,8 +98,8 @@ a:hover{
 
 /*头部区域*/
 header{
-  border-bottom: 1px solid #000;
-  background: #333;
+  border-bottom: 1px solid #666;
+  background: #EFEFEF;
   height: 54px;
   position: absolute;
   display: inline-block;
@@ -138,7 +138,7 @@ header .pull-right .help {
   font-weight: 500;
   text-decoration: underline;
   padding-right: 10px;
-  color: #ccc;
+  color: #666;
 }
 
 header .help:hover {
@@ -195,7 +195,9 @@ header a.btn-info:hover {
   left: 0;
   top: 0;
   height: 100%;
-  background-color: rgb(89, 89, 89);
+  background-color: #fff;
+  box-shadow: 1px 0px 1px #666;
+  z-index: 999;
 
 }
 
@@ -210,8 +212,9 @@ header a.btn-info:hover {
 .editor_panel>ul>li {
   text-align: center;
   width: 64px;
-  border-left: 1px solid #000;
-  background: rgb(61, 61, 61);
+  /*border-left: 1px solid #000;*/
+  /*background: rgb(61, 61, 61);*/
+  background: #E1E1E1;
 }
 
 .editor_panel .nav {
@@ -220,12 +223,12 @@ header a.btn-info:hover {
 }
 
 .editor_panel .nav li.active a{
-  background-color: #4d4d4d;
+  background-color: #398CCC;
   color: #fff;
 }
 
 .editor_panel .nav li a:hover {
-  background:#4d4d4d;
+  background:#398CCC;
 }
 
 .editor_panel .nav li a:active .glyphicon{
@@ -254,6 +257,39 @@ header a.btn-info:hover {
   margin-right: 0px;
 }
 
+.tabIcons {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  background-size: cover;
+  margin-top: -2px;
+}
+
+.tabIconTrees {
+  background: url(../images/tabicons/trees.png) no-repeat left top;
+  background-size: cover;
+}
+
+.tabIconView {
+  background: url(../images/tabicons/views.png) no-repeat left top;
+  background-size: cover;
+}
+
+.tabIconSelections {
+  background: url(../images/tabicons/selections.png) no-repeat left top;
+  background-size: cover;
+}
+
+.tabIconMission {
+  background: url(../images/tabicons/mission.png) no-repeat left top;
+  background-size: cover;
+}
+
+.tabIconSchedule {
+  background: url(../images/tabicons/schedule.png) no-repeat left top;
+  background-size: cover;
+}
+
 /*edit下面选项菜单*/
 .tab-content {
   position:absolute;
@@ -264,28 +300,32 @@ header a.btn-info:hover {
 
 .tab-content .panel-group .panel {
   border-radius: 0px;
-  background: rgb(71,71,71);
+  background: #398CCC;
 }
 
 .tab-content > .tab-pane {
   width: 320px;
 }
 .tab-content .panel-default > .panel-heading {
-    background: rgb(51,51,51);
+    /*background: rgb(51,51,51);*/
+    background: #398CCC;
     padding: 6px;
 }
 
 .tab-content .panel-default {
-    border-color: #000;
+    /*border-color: #E1E1E1;*/
+    border: none;
 }
 
 .panel-group .panel-heading + .panel-collapse > .panel-body, .panel-group .panel-heading + .panel-collapse > .list-group {
-    border-top: 1px solid #000;
+    border-top: 1px solid #666;
 }
 
 .tab-content .panel-heading .panel-title>a {
-  color: #ccc;
-  font-size: 12px;
+  color: #000;
+  font-family: '黑体';
+  font-size: 14px;
+  font-weight: normal;
   text-decoration: none;
 }
 
@@ -296,7 +336,7 @@ header a.btn-info:hover {
 
 .tab-content .panel-body {
   color: #eee;
-  background: #595959;
+  background: #FFFFFF;
   position:relative;
   overflow: auto;
 }
