--- a/cssEd/metroStyle.css
+++ b/cssEd/metroStyle.css
@@ -31,7 +31,7 @@ website:    http://code.google.com/p/jquerytree/
   background-color:transparent; background-repeat:no-repeat; background-attachment: scroll;
   background-image:url("../images/img/metro.png"); *background-image:url("../images/img/metro.gif")}
 
-.ztree li span.button.chk {width:13px; height:13px; margin:0 2px; cursor: auto}
+.ztree li span.button.chk {width:13px; height:13px; margin:0 2px; cursor: auto;}
 .ztree li span.button.chk.checkbox_false_full {background-position: -5px -5px;}
 .ztree li span.button.chk.checkbox_false_full_focus {background-position: -5px -26px;}
 .ztree li span.button.chk.checkbox_false_part {background-position: -5px -48px;}
@@ -152,7 +152,7 @@ div.ruler div.cursor {height:20px; width:30px; background-color:#3C6E31; color:w
     margin: 0px;
   }
 
-  div#rMenuEye {position:absolute; visibility:hidden; top:0; background-color: #555;text-align: left;padding: 2px;}
+  div#rMenuEye {position:absolute; visibility:hidden; top:0; background-color: #555;text-align: left;padding: 2px; z-index: 9999;}
   div#rMenuEye ul li{
     margin: 1px 0;
     padding: 0 5px;
