--- a/cssEd/editings.css
+++ b/cssEd/editings.css
@@ -2,7 +2,7 @@
 * @Author: iceStone
 * @Date:   2016-01-11 11:23:18
 * @Last Modified by:   Marte
-* @Last Modified time: 2016-07-07 19:17:56
+* @Last Modified time: 2016-07-13 11:57:34
 */
 
 body {
@@ -826,9 +826,9 @@ body {
 } */
 
 /* 右键菜单样式 */
- #rightMenu {
+ /* #rightMenu {
     width: 105px;
-    /*height: auto;*/
+    height: auto;
     
     background: #fefefe;
     position: absolute;
@@ -852,15 +852,15 @@ body {
     line-height: 20px;
     padding: 0 4px;
   }
-
+ 
   #rightMenu li > a:hover{
     background: #00ACFF;
     color: #fff;
   }
-
+ 
   .shuxing{
     background: #fff;
-  }
+  } */
 
   /*pro属性显示*/
   #pro {
